--- a/client/css/profile_style.css
+++ b/client/css/profile_style.css
@@ -10,12 +10,13 @@ body {
 }
 #profileHeader {
     height: 100%;
-    width: 300px;
+    width: 20vw;
     background-color: rgba(0, 0, 0, 0.904);
     display: flex;
     flex-direction: column;
     align-items: center;
     border-radius: 3px;
+    overflow: hidden;
 }
 
 #profilePhoto {
@@ -74,15 +75,57 @@ body {
     width: 100px;
     font-size: 17px;
     margin-top: auto;
-    
+}
 
+#logoutBtn {
+    color: aliceblue;
+    background-color: rgba(36, 3, 221, 0.863);
+    border: 0.5px solid rgb(45, 0, 128);
+    border-radius: 5px;
+    width: 100px;
+    font-size: 17px;
+    margin-top: auto;
+}
+
+#editBtn {
+    color: aliceblue;
+    background-color: rgba(36, 3, 221, 0);
+    border: 0px;
+    border-radius: 5px;
+    width: 100px;
+    font-size: 15px;
+    align-self: flex-end;
+    margin: 5px;
+    text-decoration-line: underline;
+}
+
+#uploadLink {
+    color: aliceblue;
+    background-color: rgba(36, 3, 221, 0);
+    border: 0px;
+    border-radius: 5px;
+    width: 100px;
+    font-size: 15px;
+    align-self: flex-end;
+    margin: 5px;
+    text-decoration-line: underline;
+}
+
+.headerLink {
+    list-style: none;
+    font-weight: bold;
+    color: aliceblue;
+    text-align: center;
+    padding: 18px;
+    font-size: 18px;
+    text-decoration: none;
 }
 
 #profileContent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 80vw;
 }
 
 .box{
@@ -90,13 +133,29 @@ body {
     border: 0.5px solid rgb(45, 0, 128);
     color: aliceblue;
     border-radius: 12px;
-    height: 200px;
+    height: 25%;
     width: 80%;
     margin: 35px;
     box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+}
+
+.box#middleBox{
+    background-color: rgb(63, 13, 156);
+    border: 0.5px solid rgb(45, 0, 128);
+    color: aliceblue;
+    border-radius: 12px;
+    height: 27%;
+    width: 80%;
+    margin: 35px;
+    box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
+    margin-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 
 .largeBox{
@@ -104,12 +163,13 @@ body {
     border: 0.5px solid rgb(45, 0, 128);
     color: aliceblue;
     border-radius: 12px;
-    height: 55vh;
+    height: 55%;
     width: 80%;
     margin: 35px;
     box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
     margin-bottom: 5px;
-    overflow: auto;
+    overflow: hidden;
+
 }
 
 .boxTitle{
@@ -119,27 +179,55 @@ body {
     font-size: 20px;
 }
 
+#bioContainer{
+    width: 100%;
+    height: 100%;
+}
+
 #bioTextBox{
-    width: 90%;
-    height: 120px;
-    margin-left: 17px;
+    width: 100%;
+    height: 95%;
     text-align: left;
     background-color: rgb(63, 13, 156);
     border: 0;
     color: white;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     font-size: medium;
-    align-self: center;
+    overflow: auto;
+    box-sizing: border-box;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 26px;
+    padding-right: 26px;
+    resize: none;
+    outline: none;
 }
 
 .profileWorks ul{
     display: flex;
     list-style: none;
-    padding-left: 26px;
-    margin: 0px;
+    margin-left: 26px;
+    margin-right: 26px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
     flex-wrap: wrap;
-    height: 45vh;
+    height: 100%;
+    overflow: auto;
 
+}
+
+.profileWorks ul.smallWorksList {
+    display: flex;
+    list-style: none;
+    margin-left: 26px;
+    margin-right: 26px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding: 0px;
+    flex-wrap: nowrap;
+    height: 90%;
+    overflow: auto;
 }
 
 .profileWorks li{
@@ -153,6 +241,10 @@ body {
     width: 120px;
     height: 100px;
     box-shadow: 0px -2px 3px 0px rgb(28 28 28 / 78%);
+}
+
+.profileWorks {
+    height: 80%;
 }
 
 .profileWorks a{
