--- a/client/css/profile_style.css
+++ b/client/css/profile_style.css
@@ -8,6 +8,7 @@ body {
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     display: flex;
 }
+
 #profileHeader {
     height: 100%;
     width: 20vw;
@@ -28,7 +29,7 @@ body {
     border-radius: 50%;
 }
 
-#username {
+#profileName {
     color: aliceblue;
     padding: 5px;
     position: relative;
@@ -77,15 +78,23 @@ body {
     margin-top: auto;
 }
 
-#logoutBtn {
+.btn {
     color: aliceblue;
-    background-color: rgba(36, 3, 221, 0.863);
+    background-color: rgb(63, 13, 156);
     border: 0.5px solid rgb(45, 0, 128);
     border-radius: 5px;
-    width: 100px;
+    width: fit-content;
+    font-size: 15px;
+    padding: 4px 12px;
+    font-weight: 400;
+    box-sizing: border-box;
+}
+
+#logoutBtn {
     font-size: 17px;
     margin-top: auto;
 }
+
 
 #editBtn {
     color: aliceblue;
@@ -148,7 +157,7 @@ body {
     border: 0.5px solid rgb(45, 0, 128);
     color: aliceblue;
     border-radius: 12px;
-    height: 27%;
+    height: 30%;
     width: 80%;
     margin: 35px;
     box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
@@ -226,7 +235,7 @@ body {
     margin-bottom: 0px;
     padding: 0px;
     flex-wrap: nowrap;
-    height: 90%;
+    height: 95%;
     overflow: auto;
 }
 
@@ -245,6 +254,10 @@ body {
 
 .profileWorks {
     height: 80%;
+}
+
+.box.profileWorks {
+    height: 70%;
 }
 
 .profileWorks a{
