--- a/client/css/profile_style.css
+++ b/client/css/profile_style.css
@@ -59,22 +59,19 @@ body {
 }
 
 #followBtn {
-    color: aliceblue;
-    background-color: rgb(63, 13, 156);
-    border: 0.5px solid rgb(45, 0, 128);
-    border-radius: 5px;
+
     width: 100px;
     font-size: 17px;
 
 }
 
 #reportBtn {
-    color: aliceblue;
+    /* color: aliceblue; */
     background-color: rgba(221, 3, 3, 0.863);
-    border: 0.5px solid rgb(45, 0, 128);
+    /* border: 0.5px solid rgb(45, 0, 128);
     border-radius: 5px;
     width: 100px;
-    font-size: 17px;
+    font-size: 17px; */
     margin-top: auto;
 }
 
