--- a/React/music_collab/src/components/ProfileContent/styles.css
+++ b/React/music_collab/src/components/ProfileContent/styles.css
@@ -20,6 +20,10 @@
     overflow: hidden;
 }
 
+#middleBox{
+    height: 30%;
+}
+
 
 .boxTitle{
     margin: 10px;
@@ -53,6 +57,7 @@
 }
 
 
+
 .largeBox{
     background-color: rgb(63, 13, 156);
     border: 0.5px solid rgb(45, 0, 128);
@@ -66,6 +71,7 @@
     overflow: hidden;
 
 }
+
 
 .profileWorks ul{
     display: flex;
@@ -111,7 +117,7 @@
     height: 80%;
 }
 
-.box.profileWorks {
+.smallBox.profileWorks {
     height: 70%;
 }
 
