--- a/React/music_collab/src/App.css
+++ b/React/music_collab/src/App.css
@@ -4,3 +4,204 @@ html,body{
   font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.row{
+  width: 70%;
+}
+
+#page {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+}
+
+.btn {
+  color: aliceblue;
+  background-color: rgb(63, 13, 156);
+  border: 0.5px solid rgb(45, 0, 128);
+  border-radius: 5px;
+  width: fit-content;
+  font-size: 15px;
+  padding: 4px 12px;
+  font-weight: 400;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: rgb(39, 8, 98);
+}
+
+.boxBtn {
+  color: aliceblue;
+  background-color: rgba(36, 3, 221, 0);
+  border: 0px;
+  border-radius: 5px;
+  width: 100px;
+  font-size: 15px;
+  align-self: flex-end;
+  margin: 5px;
+  text-decoration: none;
+ 
+}
+
+#logoutBtn {
+  font-size: 17px;
+  margin-top: auto;
+}
+
+.boxBtn:hover {
+  text-decoration-line: underline;
+  color: rgb(199, 204, 209);
+}
+.sectionBtn {
+  align-self: flex-start;
+  margin-left: 15%;
+}
+
+
+form {
+  width: 60vw;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.inputBox {
+  display: block;
+  padding: 10px;
+  border-radius: 10px;
+  border: 0.1px solid silver;
+  background-color: rgb(235 235 235);
+  width: 90%;
+  font-size: medium;
+  margin-top: 5px;
+}
+
+.inputBox:focus {
+  background-color: white;
+  border-color: rgb(63, 13, 156);
+  outline: none;
+}
+
+.inputLabel {
+  font-size: small;
+  margin: 5px;
+}
+
+.pageTitle {
+  margin: 21px 0px;
+}
+
+#backLink{
+  text-decoration: none;
+  color: gray;
+  margin-top: 35px;
+}
+
+.boxTitle{
+  margin: 10px;
+  padding: 7px;
+  font-weight: 800;
+  font-size: 20px;
+}
+
+.smallBox{
+  background-color: rgb(63, 13, 156);
+  border: 0.5px solid rgb(45, 0, 128);
+  color: aliceblue;
+  border-radius: 12px;
+  height: 25%;
+  width: 80%;
+  margin: 35px;
+  box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.largeBox{
+  background-color: rgb(63, 13, 156);
+  border: 0.5px solid rgb(45, 0, 128);
+  color: aliceblue;
+  border-radius: 12px;
+  height: 55%;
+  width: 80%;
+  margin: 35px;
+  box-shadow: 0px 4px 4px 3px rgba(161, 160, 160, 0.959);
+  margin-bottom: 5px;
+  overflow: hidden;
+
+}
+
+.sectionTitle{
+  font-size: 16px;
+  align-self: flex-start;
+  margin-left: 10%;
+}
+
+
+
+.profileWorks {
+  height: 80%;
+}
+
+.smallBox.profileWorks {
+  height: 70%;
+}
+
+.profileWorks ul{
+  display: flex;
+  list-style: none;
+  margin-left: 26px;
+  margin-right: 26px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+  flex-wrap: wrap;
+  height: 100%;
+  overflow: auto;
+
+}
+
+.profileWorks ul.smallWorksList {
+  display: flex;
+  list-style: none;
+  margin-left: 26px;
+  margin-right: 26px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+  flex-wrap: nowrap;
+  height: 95%;
+  overflow: auto;
+}
+
+.profileWorks li{
+  list-style: none;
+  margin: 0px;
+  margin-right: 25px;
+  margin-bottom: 15px;
+}
+
+.profileWorks img{
+  width: 120px;
+  height: 100px;
+  box-shadow: 0px -2px 3px 0px rgb(28 28 28 / 78%);
+}
+
+.profileWorksLink{
+  text-decoration: none;
+ color: white;
+  display: block;
+  text-align: center;
+}
+
+#profileName {
+  color: aliceblue;
+  padding: 5px;
+  position: relative;
+  top: 25px;
+  text-align: center;
+}
