--- a/React/music_collab/src/App.css
+++ b/React/music_collab/src/App.css
@@ -8,7 +8,7 @@ body {
   background-color: black;
 }
 
-#profile-header {
+.profile-header {
   height: 100%;
   width: 20vw;
   background-color: rgba(0, 0, 0, 0.904);
@@ -24,7 +24,7 @@ body {
   width: 70%;
 }
 
-#page {
+.page {
   display: flex;
   width: 100vw;
   height: 100vh;
@@ -34,7 +34,7 @@ body {
   color: aliceblue;
   background-color: rgb(63, 13, 156);
   border: 0.5px solid rgb(45, 0, 128);
-  border-radius: 5px;
+  border-radius: 15px;
   width: fit-content;
   font-size: 15px;
   padding: 4px 12px;
@@ -57,7 +57,22 @@ body {
   align-self: flex-end;
   margin: 5px;
   text-decoration: none;
- 
+}
+
+.box-label {
+  color: aliceblue;
+  background-color: rgba(36, 3, 221, 0);
+  border: 0px;
+  border-radius: 5px;
+  width: fit-content;
+  font-size: 15px;
+  align-self: flex-end;
+  margin: 5px;
+  text-decoration: none;
+}
+
+.margin-10{
+  margin: 10px;
 }
 
 #logout-btn {
@@ -89,7 +104,7 @@ form {
   padding: 10px;
   border-radius: 10px;
   border: 0.1px solid silver;
-  background-color: rgb(235 235 235);
+  background-color: rgb(183 181 181);;
   width: 90%;
   font-size: medium;
   margin-top: 5px;
@@ -121,6 +136,7 @@ form {
   padding: 7px;
   font-weight: 800;
   font-size: 20px;
+  color: aliceblue;
 }
 
 .small-box{
@@ -138,12 +154,63 @@ form {
   overflow: hidden;
 }
 
+.small-dark-box {
+  background-color: #1c1c1e;
+  border: 0.5px solid #141414;
+  color: aliceblue;
+  border-radius: 12px;
+  height: 20%;
+  width: 80%;
+  margin: 35px;
+  box-shadow: 0px 2px 4px 3px #141414;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  
+}
+
+.tall-small-dark-box {
+  background-color: #1c1c1e;
+  border: 0.5px solid #141414;
+  color: aliceblue;
+  border-radius: 12px;
+  height: 100%;
+  width: 80%;
+  margin: 20px;
+  box-shadow: 0px 2px 4px 3px #141414;
+  margin-bottom: 5px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  margin-left: 0px;
+  
+}
+
+.height-25 {
+  height: 25%;
+}
+
+.large-dark-box{
+ background-color: #1c1c1e;
+  border: 0.5px solid #141414;
+  color: aliceblue;
+  border-radius: 12px;
+  height: 45%;
+  width: 80%;
+  margin: 35px;
+  box-shadow: 0px 2px 4px 3px #141414;
+  margin-bottom: 5px;
+  overflow: hidden;
+
+}
+
 .large-box{
   background-color: rgb(63, 13, 156);
   border: 0.5px solid rgb(45, 0, 128);
   color: aliceblue;
   border-radius: 12px;
-  height: 55%;
+  height: 45%;
   width: 80%;
   margin: 35px;
   box-shadow: 0px 4px 4px 3px rgb(39 8 98);
@@ -204,6 +271,7 @@ form {
   width: 120px;
   height: 100px;
   box-shadow: 0px -2px 3px 0px rgb(28 28 28 / 78%);
+  border-radius: 5px;
 }
 
 .profile-works-link{
@@ -219,6 +287,82 @@ form {
   position: relative;
   top: 25px;
   text-align: center;
-  margin-top: 0px;
   font-size: 30px;
+}
+
+.extra-large-dark-box{
+  background-color: #1c1c1e;
+  border: 0.5px solid #141414;
+  color: aliceblue;
+  border-radius: 12px;
+  height: 80%;
+  width: 80%;
+  margin: 35px;
+  box-shadow: 0px 2px 4px 3px #141414;
+  margin-bottom: 5px;
+  overflow: hidden;
+ }
+
+ .small-profile-picture {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 0.5px solid black;
+ }
+
+.bio-text-box{
+  width: 100%;
+  height: 95%;
+  text-align: left;
+  background-color: #1c1c1e;
+  border: 0;
+  color: white;
+  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-size: medium;
+  overflow: auto;
+  box-sizing: border-box;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-left: 26px;
+  padding-right: 26px;
+  resize: none;
+  outline: none;
+}
+
+.popup-overlay {
+  width: 100vw;
+  height: 100vh;
+  background-color: #2d2b2ea1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.popup-content {
+  width: 50vw;
+  height: 50vh;
+  background-color: #121212;;
+  margin: auto;
+  border-radius: 10px;
+  display:flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.popup-close-btn {
+  align-self: flex-end;
+  color: white;
+  background-color: transparent;
+  border: none;
+  font-size: 30px;
+  font-weight: 600;
+  padding: 20px;
+  margin: 5px 15px;
+  cursor: pointer;
+}
+
+.popup-close-btn:hover {
+  color: rgb(211, 211, 211); 
 }
