--- a/React/music_collab/src/components/ProfileContent/styles.css
+++ b/React/music_collab/src/components/ProfileContent/styles.css
@@ -1,24 +1,24 @@
-#profileContent {
+#profile-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 80vw;
 }
 
-#middleBox{
+#middle-box{
     height: 30%;
 }
 
-#bioContainer{
+#bio-container{
     width: 100%;
     height: 100%;
 }
 
-#bioTextBox{
+#bio-text-box{
     width: 100%;
     height: 95%;
     text-align: left;
-    background-color: rgb(63, 13, 156);
+    background-color: #1c1c1e;
     border: 0;
     color: white;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
@@ -31,4 +31,39 @@
     padding-right: 26px;
     resize: none;
     outline: none;
+}
+
+#download-box {
+    height: 25%;
+}
+
+#top-profile-content{
+    height:40%;
+    display:flex;
+    margin-bottom: 37px;
+    width: 80%;
+    align-items: flex-start;
+}
+
+#interests-list{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding-left: 25px;
+    margin-top: 0px;
+}
+
+
+#interests-list li{
+    width:fit-content;
+}
+
+#interests-list li p{
+    margin: 0px 10px;
+    font-size: 16px;
+    cursor: default;
+}
+
+#interests-list li p:hover{
+    background-color: rgb(63, 13, 156);
 }
