--- a/React/music_collab/src/components/ProfileSettingsContent/styles.css
+++ b/React/music_collab/src/components/ProfileSettingsContent/styles.css
@@ -3,14 +3,15 @@
     flex-direction: column;
     align-items: center;
     width: 80vw;
+    color: white;
 }
 
-#headerContainer{
+#header-container{
     display: flex;
     width: 60vw;
 }
 
-#settingsContainer {
+#settings-container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,7 +21,7 @@
     
 }
 
-#passwordContainer{
+#password-container{
     display: flex;
     flex-direction: column;
     align-items: center;
