--- a/React/music_collab/src/components/ProfileSettingsHeader/styles.css
+++ b/React/music_collab/src/components/ProfileSettingsHeader/styles.css
@@ -1,15 +1,4 @@
-#profileHeader {
-    height: 100%;
-    width: 20vw;
-    background-color: rgba(0, 0, 0, 0.904);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 3px;
-    overflow: hidden;
-}
-
-#profilePhotoContainer{
+#profile-photo-container{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -17,7 +6,7 @@
     height: 230px;
 }
 
-#profilePhoto {
+#profile-photo {
     margin-top: 37px;
     width: 190px;
     height: 190px;
@@ -27,7 +16,7 @@
     position: unset;
 }
 
-#changePhotoLabel {
+#change-photo-label {
     color: aliceblue;
     cursor: pointer;
     width: 190px;
@@ -53,11 +42,11 @@
     padding-bottom: 0px;
 }
 
-.headerSubLabel{
+.header-sub-label{
     color: grey;
 }
 
-#logoutBtn {
+#logout-btn {
     font-size: 17px;
     margin-top: auto;
 }
