--- a/React/music_collab/src/components/UploadCoverPhoto/styles.css
+++ b/React/music_collab/src/components/UploadCoverPhoto/styles.css
@@ -1,4 +1,4 @@
-#uploadContainer {
+#upload-container {
     height: 100%;
     width: 30vw;
     display: flex;
@@ -8,7 +8,7 @@
     overflow: hidden;
 }
 
-#coverPhotoContainer{
+#cover-photo-container{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -17,14 +17,14 @@
     margin-top: 60px;
 }
 
-#coverPhoto {
+#cover-photo {
     width: 190px;
     height: 190px;
     border: 2px solid silver;
     z-index: 0;
 }
 
-#changeCoverPhotoLabel {
+#change-cover-photo-label {
     color: aliceblue;
     cursor: pointer;
     width: 190px;
@@ -39,7 +39,7 @@
     display: none;
 }
 
-#uploadBtn {
+#upload-btn {
     font-size: 17px;
     margin-top: 120px;
 }
