--- a/React/music_collab/src/components/SelectCategories/styles.css
+++ b/React/music_collab/src/components/SelectCategories/styles.css
@@ -8,7 +8,7 @@
 
 .searchWrapper:focus-within {
     background-color: white;
-    border-color: rgb(63, 13, 156);
+    border-color: #7713cf;
   }
 
 .multiSelectContainer {
