--- a/React/music_collab/src/components/UploadWorkDetails/styles.css
+++ b/React/music_collab/src/components/UploadWorkDetails/styles.css
@@ -1,64 +1,88 @@
-#workDetails {
+#upload-page{
+ display: flex;
+ width: 80vw;
+}
+
+#work-details {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70vw;
+    width: 70%;
+    color: white;
+    box-sizing: border-box;
 }
 
-#headerContainer{
+#header-container{
     display: flex;
-    width: 60vw;
+    width: 85%;
 }
 
-#detailsContainer {
+#details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60vw;
+    width: 85%;
     border-top: 0.1px solid silver;
     margin-top: 20px;
-    
+    padding-top: 20px;
 }
 
-#audioFileLabel {
-    border: 0.1px dashed silver;
-    height: 40px;
+#audio-file-label {
+    border: 0.1px dashed rgb(45 0 128);
     line-height: 40px;
     text-align: center;
     cursor: pointer;
+    color: black;
 }
 
-#audioFileLabel:hover {
+#audio-file-label:hover {
     background-color: white;
     border: 0.1px solid;
-    border-color: rgb(63, 13, 156);
+    border-color: #7713cf;
     outline: none;
 
 }
 
-#audioFile {
+#audio-file {
     display: none;
 }
 
-#descriptionTextBox{
-    display: block;
-    padding: 10px;
-    border-radius: 10px;
-    border: 0.1px solid silver;
-    background-color: rgb(235 235 235);
-    width: 90%;
-    font-size: medium;
-    margin-top: 5px;
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-    overflow: auto;
-    resize: none;
-    outline: none;
-    height: 120px;
+
+.add-ref-box {
+    width: 100%;
+    display: flex;
 }
 
-#descriptionTextBox:focus {
-    background-color: white;
-    border-color: rgb(63, 13, 156);
-    outline: none;
+
+.ref-description {
+    width: 45%;
+    height: 100px;
+    margin: 3px 10px;
+    font-size: small;
+  }
+
+.add-ref-btn {
+    height: 10px;
+    background-color: rgba(36, 3, 221, 0);
+    border: none;
+    color: #9d2cff;
+    font-size: 25px;
+    font-weight: 900;
+    padding: 0px 2px;
+    line-height: 16px;
 }
 
+.add-ref-btn:hover {
+    color: #7713cf;
+}
+
+.remove-ref-btn {
+    height: 10px;
+    background-color: rgba(36, 3, 221, 0);
+    border: none;
+    font-size: 35px;
+    font-weight: 900;
+    text-align: center;
+    padding: 0px 2px;
+    line-height: 10px;
+}
