--- a/React/music_collab/src/components/NavigationBar/styles.css
+++ b/React/music_collab/src/components/NavigationBar/styles.css
@@ -20,7 +20,7 @@
 }
 
 .nav-logo {
-  color: #f5b921;
+  color: #9317ff;
   align-items: center;
   margin-left: 20px;
   cursor: pointer;
@@ -63,12 +63,12 @@
 
 .nav-item:hover:after {
   width: 100%;
-  background: #ffdd40;
+  background: #9317ff;
 }
 
 .nav-item .active {
-  color: #ffdd40;
-  border: 1px solid #ffdd40;
+  color: #9317ff;
+  border: 1px solid #6012a5;
 }
 
 .nav-icon {
@@ -80,7 +80,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    border-top: 1pxsolid #fff;
+    border-top: 1px solid #fff;
     position: absolute;
     top: 80px;
     left: -110%;
@@ -89,14 +89,14 @@
   }
 
   .nav-menu.active {
-    background: #1f5156;
+    background: #1e1e20;
     left: 0px;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
   }
   .nav-item .active {
-    color: #ffdd40;
+    color: #9317ff;
     border: none;
   }
   .nav-links {
