--- a/React/music_collab/src/components/AdminComponents/Popup.css
+++ b/React/music_collab/src/components/AdminComponents/Popup.css
@@ -1,22 +1,28 @@
-.popup-box {
-    position: fixed;
-    background: #00000050;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-}
-   
-.addAdminBox {
+#popup-title {
     position: relative;
-    width: 70%;
-    margin: 0 auto;
-    height: auto;
-    max-height: 70vh;
-    margin-top: calc(100vh - 85vh - 20px);
-    background: #fff;
-    border-radius: 4px;
-    padding: 20px;
-    border: 1px solid #999;
-    overflow: auto;
+    left: 30px;
+}
+
+#addInput {
+    position: absolute;
+    left: 480px;
+    margin-top: 8px;
+}
+
+#adminForm {
+    position: relative;
+    right: 180px;
+}
+
+#btn-a {
+    margin-top: 20px;
+    display: inline-block;
+    position: relative;
+    left: 230px;
+}
+
+#btn-b {
+    display: inline-block;
+    position: relative;
+    left: 240px;
 }
