--- a/React/music_collab/src/components/ProfileSideNav/styles.css
+++ b/React/music_collab/src/components/ProfileSideNav/styles.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 50%;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .side-nav-link {
