--- a/React/music_collab/src/components/CoverHeader/styles.css
+++ b/React/music_collab/src/components/CoverHeader/styles.css
@@ -3,8 +3,9 @@
     top: 37px;
     width: 250px;
     height: 250px;
-    border: 2px solid silver;
+    border: 2px solid rgb(39 8 98);
     border-radius: 5%;
+
 }
 
 .profile-stats ul li {
@@ -31,7 +32,7 @@
 #report-btn {
     background-color: rgba(221, 3, 3, 0.863);
     border-color: rgba(160, 2, 2, 0.863);
-    font-size: 17px;
+    font-size: 15px;
 }
 
 #report-btn:hover {
@@ -59,23 +60,29 @@
     font-size: 17px;
 }
 
+#edit-btn {
+    text-decoration: none;
+}
+
 #timeline-btn{
     margin-right: 50px;
+    text-decoration: none;
 }
 
 #download-btn {
+    text-decoration: none;
     margin-right: 50px;
 }
 
 #description-text {
-    margin-left: 10px;
+    margin: 5px 15px;
 }
 
 #interests-list{
     display: flex;
     flex-wrap: wrap;
     list-style: none;
-    padding-left: 25px;
+    padding-left: 4px;
     margin-top: 0px;
 }
 
@@ -88,6 +95,7 @@
     margin: 0px 10px;
     font-size: 16px;
     cursor: default;
+    background-color: #6412ad;
 }
 
 #interests-list li p:hover{
@@ -125,4 +133,48 @@
 
 #like-btn{
     margin-left: 10px;
+    background-color: #6f27ad;
+    width: 80px;
+}
+
+.page .rhap_time {
+    color: #9317ff;
+}
+
+.page .rhap_container {
+    background-color: rgb(63 13 156 / 0%);
+    padding: 10px 30px;
+}
+
+.page  .rhap_progress-indicator {
+    background-color: rgb(70 3 193);
+}
+
+.page  .rhap_progress-filled {
+    background-color: rgb(70 3 193);
+
+}
+
+.page .rhap_main-controls-button {
+    color: rgb(70 3 193);
+}
+
+.page .rhap_volume-button {
+    color: rgb(70 3 193);
+}
+
+.page .rhap_volume-indicator {
+    background: #9317ff;
+}
+
+.page .rhap_repeat-button {
+    color: rgb(70 3 193);
+}
+
+.hashtag-cover-page {
+        color: #6b309f;
+        margin-bottom: 0;
+        padding: 3px 15px;
+        margin: 0;
+        padding-bottom: 10px;
 }
