--- a/React/music_collab/src/pages/LoginBox/styles.css
+++ b/React/music_collab/src/pages/LoginBox/styles.css
@@ -8,13 +8,14 @@ body{
      border: 0.5px solid #141414;
      color: aliceblue;
      border-radius: 12px;
-     height: 50%;
-     width: 50%;
+     height: 80%;
+     width: 80%;
      margin: auto;
      box-shadow: 0px 2px 4px 3px #141414;
      margin-bottom: 5px;
      overflow: hidden;
      margin-top: 10%;
+     align-items: center;
 }
 
 .logIn-greetings {
@@ -23,4 +24,8 @@ body{
 
 .login-form-container {
     margin-right: 5000px;
+}
+
+.login_form {
+    margin-left: 132px;
 }
