--- a/React/music_collab/src/components/CoverContent/styles.css
+++ b/React/music_collab/src/components/CoverContent/styles.css
@@ -3,7 +3,7 @@
     border: 0.5px solid #141414;
     color: aliceblue;
     border-radius: 12px;
-    height: 85%;
+    height: 70%;
     width: 80%;
     margin: 20px;
     box-shadow: 0px 2px 4px 3px #141414;
@@ -11,6 +11,22 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    margin-left: 0px;
+}
+
+#description-box {
+    background-color: #1c1c1e;
+    border: 0.5px solid #141414;
+    color: aliceblue;
+    border-radius: 12px;
+    width: 80%;
+    height: 30%;
+    margin: 20px;
+    display: block;
+    position: relative;
+    box-shadow: 0px 2px 4px 3px #141414;
+    margin-top: 15px;
+    overflow: auto;
     margin-left: 0px;
 }
 
