Login page Formatted, Cover Page plays Audio, New Images

--- a/React/music_collab/src/components/ExploreView/styles.css
+++ b/React/music_collab/src/components/ExploreView/styles.css
@@ -31,6 +31,7 @@
 
 .personalized-feed .large-dark-box-explore {
     margin-top: 20px;
+    margin-bottom: 5px;
 }
 
 .bottom-page .large-dark-box-explore {
