--- a/React/music_collab/src/components/ProfileSettingsContent/styles.css
+++ b/React/music_collab/src/components/ProfileSettingsContent/styles.css
@@ -27,3 +27,10 @@
     width: 100%;
     border-top: 0.1px solid silver;
 }
+
+#profile-form {
+    width: 60vw;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
