--- a/React/music_collab/src/components/UploadWorkDetails/styles.css
+++ b/React/music_collab/src/components/UploadWorkDetails/styles.css
@@ -92,3 +92,9 @@
  margin-left: 300px;
 }
 
+#upload-form {
+    width: 60vw;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
