--- a/React/music_collab/src/components/CoverContent/styles.css
+++ b/React/music_collab/src/components/CoverContent/styles.css
@@ -3,7 +3,7 @@
     border: 0.5px solid #141414;
     color: aliceblue;
     border-radius: 12px;
-    height: 70%;
+    height: 90%;
     width: 80%;
     margin: 20px;
     box-shadow: 0px 2px 4px 3px #141414;
@@ -73,6 +73,7 @@
     margin-left: 30px;
     display: flex;
     flex-direction: column;
+    margin-top: auto;
 }
 
 #comment-username-btn{
