--- a/React/music_collab/src/components/UploadCoverPhoto/styles.css
+++ b/React/music_collab/src/components/UploadCoverPhoto/styles.css
@@ -17,7 +17,7 @@
     margin-top: 125px;
 }
 
-#cover-photo {
+#cover-photo-upload {
     width: 190px;
     height: 190px;
     border: 2px solid silver;
