--- a/React/music_collab/src/pages/LoginBox/styles.css
+++ b/React/music_collab/src/pages/LoginBox/styles.css
@@ -16,6 +16,8 @@ body{
      overflow: hidden;
      margin-top: 10%;
      align-items: center;
+     display: flex;
+     flex-direction: column;
 }
 
 .logIn-greetings {
@@ -23,9 +25,14 @@ body{
 }
 
 .login-form-container {
-    margin-right: 5000px;
+    width: fit-content;
+    margin: 0;
 }
 
 .login_form {
-    margin-left: 132px;
+    width: 190px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
