--- a/React/music_collab/src/components/NavigationBar/styles.css
+++ b/React/music_collab/src/components/NavigationBar/styles.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: black;
-  height: 80px;
+  height: 10vh;
   display: flex;
   justify-content: center;
   align-items: center;
