--- a/React/music_collab/src/components/CoverContent/styles.css
+++ b/React/music_collab/src/components/CoverContent/styles.css
@@ -5,14 +5,12 @@
     border-radius: 12px;
     height: 90%;
     width: 80%;
-    margin: 20px;
+    margin: auto;
     box-shadow: 0px 2px 4px 3px #141414;
     margin-bottom: 5px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    margin-left: 0px;
-    margin-top: 10px;
 }
 
 #description-box {
@@ -27,7 +25,6 @@
     position: relative;
     box-shadow: 0px 2px 4px 3px #141414;
     margin-top: 15px;
-    overflow: auto;
     margin-left: 0px;
 }
 
