--- a/React/music_collab/src/components/ProfileSettingsContent/styles.css
+++ b/React/music_collab/src/components/ProfileSettingsContent/styles.css
@@ -34,3 +34,10 @@
     display: flex;
     flex-direction: column;
 }
+
+#password-form {
+    width: 60vw;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
