--- a/React/music_collab/src/components/UploadCoverPhoto/styles.css
+++ b/React/music_collab/src/components/UploadCoverPhoto/styles.css
@@ -20,7 +20,7 @@
 #cover-photo-upload {
     width: 190px;
     height: 190px;
-    border: 2px solid silver;
+    border: 2px solid rgb(39 8 98);
     z-index: 0;
     border-radius: 6px;
 }
