--- a/React/music_collab/src/components/UploadWorkDetails/styles.css
+++ b/React/music_collab/src/components/UploadWorkDetails/styles.css
@@ -3,6 +3,11 @@
  width: 80vw;
 }
 
+#edit-upload-page{
+    display: flex;
+    width: 100%;
+}
+
 #work-details {
     display: flex;
     flex-direction: column;
