--- a/React/music_collab/src/pages/SignUp/styles.css
+++ b/React/music_collab/src/pages/SignUp/styles.css
@@ -1,9 +1,10 @@
-#container {
+#signup-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 80vw;
     color: white;
+    align-self: center;
+    width: 100%;
 }
 
 #header-container{
@@ -11,11 +12,11 @@
     width: 60vw;
 }
 
-#settings-container {
+#signup-details {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 60vw;
+    width: 85%;
     border-top: 0.1px solid silver;
     margin-top: 20px;
 }
@@ -30,4 +31,11 @@
 
 #signup-cancel-btn{
     margin-left: 30px;
+}
+
+#signup-form {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 90%
 }
