--- a/React/music_collab/src/components/ProfileContent/styles.css
+++ b/React/music_collab/src/components/ProfileContent/styles.css
@@ -50,3 +50,12 @@
 .interests-list li p:hover{
     background-color: #6412ad;
 }
+
+.bio-btns {
+    display: flex;
+    align-items: center;
+}
+
+.margin-left {
+    margin-left: auto;
+}
