--- a/React/music_collab/src/App.css
+++ b/React/music_collab/src/App.css
@@ -327,7 +327,7 @@ body {
   height: 100vh;
   background-color: #2d2b2ea1;
   position: absolute;
-  top: 0;
+  top: 10vh;
   left: 0;
   display: flex;
   flex-direction: column;
