--- a/React/music_collab/src/components/NavigationBar/styles.css
+++ b/React/music_collab/src/components/NavigationBar/styles.css
@@ -75,6 +75,7 @@
   display: none;
 }
 
+/*
 @media screen and (max-width: 960px) {
   .nav-menu {
     display: flex;
@@ -115,4 +116,4 @@
     cursor: pointer;
     color: #ffdd40;
   }
-}
+} */
