Fixed UI things

--- a/client/src/components/ExploreView/styles.css
+++ b/client/src/components/ExploreView/styles.css
@@ -23,8 +23,8 @@
     flex-wrap: wrap;
 }
 
-.large-dark-box-explore p {
-    color: #6b309f;
+.hashtag {
+    color: #7d929d;
     margin-bottom: 0;
     padding: 3px 2px;
 }
