--- a/client/src/components/CoverHeader/styles.css
+++ b/client/src/components/CoverHeader/styles.css
@@ -53,17 +53,28 @@
 }
 
 #timeline-btn{
-    margin-right: 50px;
+    margin-right: 60px;
+    margin-left: 50px;
     text-decoration: none;
+    border-radius: 15px;
+    background-color: #3e56db;
+    background-image: linear-gradient(#6594bb,hsla(0,0%,100%,0));
+    border-color: #3e56db;
+    font-weight: 500;
 }
 
 #download-btn {
     text-decoration: none;
-    margin-right: 50px;
+    margin-right: 60px;
+    margin-left: 50px;
+    border-radius: 15px;
+    background-color: #1924ad;
+    background-image: linear-gradient(#3e57df,hsla(0,0%,100%,0));
+    font-weight: 500;
 }
 
 #description-text {
-    margin: 5px 15px;
+    margin: 0px 22px;
 }
 
 #des-list{
@@ -122,12 +133,18 @@
 
 #coverButtons2 {
     margin-top: 0px;
+    margin-left: 30px;
+    align-self: flex-start;
 }
 
 #like-btn{
     margin-left: 10px;
-    background-color: #6f27ad;
-    width: 80px;
+    background-color: #673ab7;
+    width: 99px;
+    border-radius: 30px;
+    font-weight: 900;
+    padding: 0px 5px;
+    background-image: linear-gradient(#5325a5 0, rgba(255, 255, 255, 0) 100%);
 }
 
 .page .rhap_time {
