--- a/client/src/components/RequestsHeader/styles.css
+++ b/client/src/components/RequestsHeader/styles.css
@@ -13,6 +13,7 @@
     border: 1px silver solid;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .request-title {
     font-weight: 700;
